// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationPoliciesSelect disabled state 1`] = `
<div>
  <div
    class="css-19xfdrs-input-wrapper select css-8k5qe3-SelectContainer"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="css-1scgfe8"
    >
      <div
        class="css-1kl463j-grafana-select-value-container"
      >
        <div
          class="css-3hgwt1-singleValue css-upz218-SingleValue"
        >
          Default
        </div>
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          aria-readonly="true"
          class="css-mohuvp-dummyInput-DummyInput"
          disabled=""
          id="react-select-3-input"
          inputmode="none"
          role="combobox"
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="css-uvldi-input-suffix"
      >
        <div
          class="css-wf08df-Icon"
        >
          <svg
            class="css-eyx4do"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationPoliciesSelect it renders properly 1`] = `
<div>
  <div
    class="css-15fuo2f-input-wrapper select css-8k5qe3-SelectContainer"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="css-1scgfe8"
    >
      <div
        class="css-1kl463j-grafana-select-value-container"
      >
        <div
          class="css-144maed-singleValue css-upz218-SingleValue"
        >
          Default
        </div>
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          aria-readonly="true"
          class="css-mohuvp-dummyInput-DummyInput"
          id="react-select-2-input"
          inputmode="none"
          role="combobox"
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="css-uvldi-input-suffix"
      >
        <div
          class="css-wf08df-Icon"
        >
          <svg
            class="css-eyx4do"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
